--- a/netflix-clone/src/Nav.css
+++ b/netflix-clone/src/Nav.css
@@ -4,11 +4,11 @@
   width: 100%;
   padding: 20px;
   height: 30px;
-
+  z-index: 1;
   display: flex;
   justify-content: space-between;
   transition-timing-function: ease-in;
-  transition: all 0.5s;
+  transition: all 0.6s;
 }
 
 .nav__logo {
